Add option to permit jvm to attach to itself for BMUnit tests.